# neurotwin-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  FIX_404_ERROR.md  FLUTTERWAVE_FIXES.md  FLUTTERWAVE_WEBHOOK_SETUP.md  PAYMENT_INTEGRATION_SUMMARY.md  PAYMENT_SYSTEM_COMPLETE.md  README-REDIS.md  README.md  TESTING_QUICKSTART.md  chat.py  check_admin.py  docker-compose.yml  main.py  manage.py  pyproject.toml  pytest.ini  restart_frontend.bat  start-redis.ps1  test_payment_endpoints.py
core/: __init__.py
docker/: entrypoint.sh
docs/: CORE_ARCHITECTURE_EXPLAINED.md  MEMORY_BACKEND_COMPLETE.md  REDIS_INTEGRATION.md  REDIS_STATUS.md  RESTART-REQUIRED.md  ai-provider-architecture.md  ai-provider-migration-guide.md  ai-provider-refactoring-summary.md  api-endpoint-mapping.md  api-fixes-summary.md  automation-integrations.md  celery-beat-setup.md  cors-setup.md  ec2-docker-deployment.md  flutterwave-metadata-setup.md  flutterwave-webhook-security.md  grafana-dashboard.json  import-fixes-summary.md  integration-adjustment-prompt.md  integration-engine-api.md  integration-engine-deployment.md  integration-engine-developer-guide.md  integration-engine-troubleshooting.md  login-fixes.md  memory-api-reference.md  memory-architecture-diagram.md  memory-csm-diagnosis.md  memory-deployment-checklist.md  memory-implementation-summary.md  meta-webhook-setup.md  monitoring-alerts.md  monitoring-setup.md  multi-auth-api-documentation.md  multi-auth-developer-guide.md  multi-auth-migration-guide.md  oauth-quick-reference.md  oauth-quick-test.md  oauth-setup-guide.md  (+19 more)
(+372 files in other folders)
