[project]
name = "neurotwin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=46.0.3",
    "django>=6.0",
    "django-q2>=1.9.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "google-genai>=1.56.0",
    "psycopg[binary]>=3.3.2",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "hypothesis>=6.148.8",
    "pytest>=9.0.2",
    "pytest-django>=4.11.1",
]
