[project]
name = "neurotwin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.4.0",
    "cryptography>=46.0.3",
    "django>=6.0",
    "django-celery-beat>=2.7.0",
    "django-cors-headers>=4.9.0",
    "django-q2>=1.9.0",
    "django-redis>=5.4.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "google-genai>=1.56.0",
    "httpx>=0.28.1",
    "kombu>=5.4.0",
    "pillow>=12.1.1",
    "prometheus-client>=0.24.1",
    "psycopg[binary]>=3.3.2",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.2.1",
    "python-json-logger>=4.0.0",
    "redis>=7.3.0",
]

[dependency-groups]
dev = [
    "hypothesis>=6.148.8",
    "pytest>=9.0.2",
    "pytest-django>=4.11.1",
]
